--- a/assets/package.json
+++ b/assets/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "preline": "^2.4.1"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4"
   }
 }
