--- a/assets/package.json
+++ b/assets/package.json
@@ -2,7 +2,7 @@
   "name": "mbta_metro",
   "version": "0.0.1",
   "description": "A Phoenix LiveView component library",
-  "main": "tailwind.config.js",
+  "main": "js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,11 +16,13 @@
     "url": "https://github.com/anthonyshull/mbta_metro/issues"
   },
   "homepage": "https://github.com/anthonyshull/mbta_metro#readme",
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
-    "preline": "^2.4.1"
-  },
   "dependencies": {
-    "leaflet": "^1.9.4"
-  }
+    "maplibre-gl": "^4.7.0",
+    "preline": "^2.4.1",
+    "@tailwindcss/forms": "^0.5.9"
+  },
+  "files": [
+    "css",
+    "js"
+  ]
 }
