--- a/assets/package.json
+++ b/assets/package.json
@@ -1,9 +1,24 @@
 {
   "name": "mbta_metro",
-  "version": "0.0.1",
+  "version": "0.0.22",
   "description": "A Phoenix LiveView component library",
+  "main": "js/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anthonyshull/mbta_metro.git"
+  },
+  "bugs": {
+    "url": "https://github.com/anthonyshull/mbta_metro/issues"
+  },
+  "author": "Anthony Shull",
   "license": "GPL-3.0-or-later",
+  "homepage": "https://github.com/anthonyshull/mbta_metro#readme",
   "dependencies": {
-    "mbta_metro": "0.0.22"
+    "camelcase-keys": "9.1.3",
+    "date-fns": "4.1.0",
+    "flatpickr": "4.6.13",
+    "maplibre-gl": "4.7.0",
+    "preline": "2.4.1",
+    "@tailwindcss/forms": "0.5.9"
   }
 }
