--- a/assets/package.json
+++ b/assets/package.json
@@ -17,9 +17,11 @@
     "camelcase-keys": "9.1.3",
     "date-fns": "4.1.0",
     "flatpickr": "4.6.13",
-    "@fortawesome/fontawesome-free": "6.6.0",
     "maplibre-gl": "4.7.0",
     "preline": "2.4.1",
     "@tailwindcss/forms": "0.5.9"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "6.6.0"
   }
 }
