--- a/priv/package.json
+++ b/priv/package.json
@@ -14,12 +14,13 @@
   "license": "GPL-3.0-or-later",
   "homepage": "https://github.com/mbta/mbta_metro#readme",
   "dependencies": {
+    "@mbta/rider-design-system": "github:mbta/rider-design-system",
+    "@tailwindcss/forms": "0.5.9",
     "camelcase-keys": "9.1.3",
     "date-fns": "4.1.0",
     "flatpickr": "4.6.13",
     "maplibre-gl": "4.7.0",
-    "preline": "2.4.1",
-    "@tailwindcss/forms": "0.5.9"
+    "preline": "2.4.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "6.6.0"
