--- a/priv/package.json
+++ b/priv/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "A Phoenix LiveView component library",
   "main": "js/index.js",
+  "exports": {
+    "tailwindTheme": "./tailwind.config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mbta/mbta_metro.git"
