feat: release & docker image

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ mbta_metro-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
+/priv/static/**/*.gz
+/priv/static/**/*-????????????????????????????????.*
+/priv/static/cache_manifest.json
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
