--- a/assets/package.json
+++ b/assets/package.json
@@ -18,7 +18,6 @@
   "license": "GPL-3.0-or-later",
   "homepage": "https://github.com/mbta/mbta_metro#readme",
   "dependencies": {
-    "@mbta/rider-design-system": "github:mbta/rider-design-system",
     "@tailwindcss/forms": "0.5.9",
     "camelcase-keys": "9.1.3",
     "date-fns": "4.1.0",
@@ -26,6 +25,8 @@
     "maplibre-gl": "4.7.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "6.6.0"
+    "@fortawesome/fontawesome-free": "6.6.0",
+    "style-dictionary": "4.4.0",
+    "style-dictionary-utils": "4.1.0"
   }
 }
