--- a/assets/package.json
+++ b/assets/package.json
@@ -23,8 +23,7 @@
     "camelcase-keys": "9.1.3",
     "date-fns": "4.1.0",
     "flatpickr": "4.6.13",
-    "maplibre-gl": "4.7.0",
-    "preline": "2.4.1"
+    "maplibre-gl": "4.7.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "6.6.0"
