--- a/assets/package.json
+++ b/assets/package.json
@@ -2,11 +2,6 @@
   "name": "mbta_metro",
   "version": "0.0.1",
   "description": "A Phoenix LiveView component library",
-  "main": "js/index.js",
-  "exports": {
-    ".": "./js/index.js",
-    "./tailwindTheme": "./tailwind.config.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mbta/mbta_metro.git"
@@ -17,15 +12,15 @@
   "author": "MBTA",
   "license": "GPL-3.0-or-later",
   "homepage": "https://github.com/mbta/mbta_metro#readme",
-  "dependencies": {
-    "@mbta/rider-design-system": "github:mbta/rider-design-system",
+  "dependencies": {},
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "6.6.0",
     "@tailwindcss/forms": "0.5.9",
     "camelcase-keys": "9.1.3",
     "date-fns": "4.1.0",
     "flatpickr": "4.6.13",
-    "maplibre-gl": "4.7.0"
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "6.6.0"
+    "maplibre-gl": "4.7.0",
+    "style-dictionary": "4.4.0",
+    "style-dictionary-utils": "4.1.0"
   }
 }
